<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profil"
                android:textSize="20dp"
                android:textColor="#000000"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profil_Desc"
                android:textSize="15dp"
                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2C3A47"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/ChangeLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"



        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                android:textSize="20dp"
                android:textColor="#000000"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Change_Lang_Desc"
                android:textSize="15dp"
                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2C3A47"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/LogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"



        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textSize="20dp"
                android:textColor="#000000"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out_Desc"
                android:textSize="15dp"
                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2C3A47"
        />

</LinearLayout>