<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:elevation="10dp"
    android:padding="10dp"
    android:background="@drawable/shape"
    android:id="@+id/ChangeLang"

    >

   <LinearLayout

       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:background="#182C61"
       >
       <TextView
           android:id="@+id/title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/LangChoice"
           android:textSize="20dp"
           android:textColor="@color/white_greyish"

           />
   </LinearLayout>

    <LinearLayout
        android:id="@+id/lang1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/french"
            android:layout_marginRight="10dp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/french"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lang2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arabic"
            android:layout_marginRight="10dp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/arabic"
            />

    </LinearLayout>




</LinearLayout>