<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent"
    android:elevation="4dp"
    android:background="@drawable/shape"


    >



    <EditText
        android:id="@+id/typed_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:drawableLeft="@drawable/confirm_password"
        android:hint="nouveau mot de passe"

        />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="15dp"
        android:drawableLeft="@drawable/confirm_password"
        android:hint="ancien mot de passe"

        />
    <CheckBox
        android:id="@+id/show_hide_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_pwd"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/annuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_weight="4"
            android:text="@string/annuler" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:text="@string/valider"
            android:layout_weight="4"
            />



    </LinearLayout>

</LinearLayout>