<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:theme="@style/AppTheme"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.vinay.stepview.HorizontalStepView
            android:id="@+id/step_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textAlignment="center"
            android:layout_marginStart="0dp"
            android:paddingStart="0dp"


            android:paddingLeft="0dp"
            android:layout_marginLeft="0dp"

            />

        <androidx.cardview.widget.CardView
            android:id="@+id/ModPay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:elevation="100dp"
            android:background="@drawable/shape"
            app:cardCornerRadius="8dp"
            android:layout_margin="8dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="25dp"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modPay"
                        android:textSize="20sp"
                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"

                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    >
                    <CheckBox
                        android:id="@+id/On_Delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        />

                    <TextView
                        android:id="@+id/On_Delivery_Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/OnDelivery"

                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"

                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"

                    >
                    <CheckBox
                        android:id="@+id/Check_Credit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_margin="0dp"

                        />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"

                        >
                        <TextView
                            android:id="@+id/Credit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/portefeuille"


                            />
                        <TextView
                            android:id="@+id/Montant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0.OO"

                            />
                    </LinearLayout>

                </LinearLayout>



            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar

        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="#CAD3C8"
        android:padding="0dp"
        android:layout_margin="0dp"
        app:contentInsetStart="0dp"



        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <Button
                android:id="@+id/valider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valider"
                android:layout_margin="2dp"
                android:enabled="false"

                />
        </LinearLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>





</androidx.coordinatorlayout.widget.CoordinatorLayout>